// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/file-icon/FileIcon should render 64 icon when dimension is defined 1`] = `
<IconFileDefault
  height={64}
  width={64}
/>
`;

exports[`icons/file-icon/FileIcon should render default 32 icon when no extension and dimension is defined 1`] = `
<IconFileDefault
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 1`] = `
<IconFileWordDocument
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 2`] = `
<IconFileWordDocument
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 3`] = `
<IconFileWordDocument
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 4`] = `
<IconFileGoogleDocs
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 5`] = `
<IconFileGoogleSheets
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 6`] = `
<IconFileGoogleSlides
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 7`] = `
<IconFileGoogleSlides
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 8`] = `
<IconFileKeynote
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 9`] = `
<IconFileNumbers
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 10`] = `
<IconFilePages
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 11`] = `
<IconFilePowerpointPresentation
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 12`] = `
<IconFilePowerpointPresentation
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 13`] = `
<IconFilePowerpointPresentation
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 14`] = `
<IconFileExcelSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 15`] = `
<IconFileExcelSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 16`] = `
<IconFileExcelSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 17`] = `
<IconFileZip
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render title when title is defined 1`] = `
<IconFileDefault
  height={32}
  title="title"
  width={32}
/>
`;
